# e-commerce-website

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  CNAME  Dockerfile  Makefile  README.md  asset-manifest.json  docker-compose-prod.yml  docker-compose.ci.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  index.html  manifest.json  service-worker.js  service-worker.js.map
backend/: .coveragerc  Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/versions/: 05fe6baf8f18_models.py  0da1e94ae313_models.py  3411330daad8_models.py  370d7363d2c1_models.py  389e7fb1e843_models.py  41b04d727012_models.py  44d8bafa7c91_models.py  4c02ff737b1d_default_model.py  6141760a7674_models.py  616aab7cdeb6_models.py  6cc1ad014620_models.py  6d3888fbb0ec_models.py  6d8e7e7ed302_models.py  6ddd2b9da8c8_models.py  7a8b0983b313_images.py  7abb74d40ddc_models.py  83b3fb4b9a44_models.py  85d6a7294cde_users.py  9b7f9e3d9069_soft_delete.py  9e2b97d3f8a6_models.py  a02e28de5f6e_models.py  a6a9427fd204_models.py  a77e8da39eb4_models.py  c70b9286c25d_models.py  c84a58019703_categories.py  cc53344df7c4_add_more_models.py  e0eb92f7a02e_models.py  e3096b6780d9_init.py  e9f0fccb167b_models.py
backend/app/: db.py  dearchive.py  factory.py  seeder.py
backend/app/api/: __init__.py  admins.py  authentications.py  banners.py  carts.py  categories.py  dashboards.py  homes.py  images.py  items.py  orders.py  products.py  sales.py  searches.py  users.py  wishlist.py  wishlists.py
backend/app/core/: config.py  logger.py
backend/app/image_classification/: requirements.txt
backend/app/models/: __init__.py  banner.py  cart.py  category.py  default.py  favorite.py  forgot_password.py  image.py  order.py  order_item.py  product.py  product_image.py  product_size_quantity.py  size.py  user.py  (+1 more)
backend/backend/: env.py
backend/sql/: rule_soft_delete.sql  soft_delete.sql  update_at.sql
backend/static/: index.html  style.css
backend/tests/: conftest.py  utils.py
(+493 files in other folders)
