[tool.poetry]
name = "e-commerce-website-backend"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.86.0"
uvicorn = "^0.19.0"
pydantic = "^1.10.2"
requests = "^2.28.1"
alembic = "^1.8.1"
psycopg2-binary = "^2.9.5"
asyncpg = "^0.27.0"
SQLAlchemy = "^1.4.41"
databases = "^0.6.1"
gunicorn = "^20.1.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^10.2.1"}
Faker = "^15.1.3"
bcrypt = "^4.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
fastapi-mail = "^1.2.0"
pytz = "^2022.6"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
pytest = "^7.2.0"
ipython = "^8.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.cruft]
skip = [".env"]
