[tool.poetry]
name = "e-commerce-website-backend"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.87.0"
uvicorn = "^0.20.0"
pydantic = "^1.10.2"
requests = "^2.28.1"
alembic = "^1.9.1"
psycopg2-binary = "^2.9.5"
asyncpg = "^0.27.0"
SQLAlchemy = "^1.4.41"
databases = "^0.6.2"
gunicorn = "^20.1.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^10.2.1"}
Faker = "^15.1.3"
bcrypt = "^4.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
fastapi-mail = "^1.2.2"
google-cloud-storage = "^2.7.0"
cffi = "1.14.6"
pytz = "^2022.6"
jinja2 = "^3.0.3"
coverage = "^7.0.5"
httpx = "^0.23.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
pytest = "^7.2.0"
ipython = "^8.6.0"

[[tool.poetry.source]]
name = 'pypi_'  # needed until python-poetry/poetry#3456 is resolved.
url = 'https://pypi.org/simple'
secondary = false

[[tool.poetry.source]]
name = "nogil"
url = "https://d1yxz45j0ypngg.cloudfront.net/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.cruft]
skip = [".env"]
